[gd_scene load_steps=10 format=3 uid="uid://yrdf0a66x2wg"]

[ext_resource type="Script" path="res://hud.gd" id="1_4615u"]
[ext_resource type="Texture2D" uid="uid://ceef8n7e7dv5s" path="res://kirbySprites/UI/HUD/MAINHUD.png" id="1_f5kyg"]
[ext_resource type="Texture2D" uid="uid://cxqclkkw0gada" path="res://kirbySprites/UI/HUD/HPFULL.png" id="3_4tbmr"]
[ext_resource type="Script" path="res://StarbarHUD.gd" id="4_m1kjj"]
[ext_resource type="Texture2D" uid="uid://b7stpyodd4l6s" path="res://kirbySprites/UI/HUD/STAR0.png" id="5_opm7o"]
[ext_resource type="Script" path="res://enemybar.gd" id="6_saj0b"]
[ext_resource type="Texture2D" uid="uid://d4aanbykerlvf" path="res://kirbySprites/UI/HUD/enemybar0.png" id="7_e7p4r"]
[ext_resource type="Script" path="res://abilitycard.gd" id="8_wng41"]
[ext_resource type="Texture2D" uid="uid://djwp8v48w4pld" path="res://kirbySprites/UI/HUD/acard0.png" id="9_3esxq"]

[node name="HUD" type="Node"]

[node name="Mainhud" type="Sprite2D" parent="."]
position = Vector2(222, 190)
scale = Vector2(1.10526, 1.10526)
texture = ExtResource("1_f5kyg")

[node name="HPbar" type="HBoxContainer" parent="."]
offset_left = 152.0
offset_top = 257.0
offset_right = 270.0
offset_bottom = 277.0
script = ExtResource("1_4615u")

[node name="h1" type="TextureRect" parent="HPbar"]
layout_mode = 2
texture = ExtResource("3_4tbmr")
stretch_mode = 2

[node name="h2" type="TextureRect" parent="HPbar"]
layout_mode = 2
texture = ExtResource("3_4tbmr")
stretch_mode = 2

[node name="h3" type="TextureRect" parent="HPbar"]
layout_mode = 2
texture = ExtResource("3_4tbmr")
stretch_mode = 2

[node name="h4" type="TextureRect" parent="HPbar"]
layout_mode = 2
texture = ExtResource("3_4tbmr")
stretch_mode = 2

[node name="h5" type="TextureRect" parent="HPbar"]
layout_mode = 2
texture = ExtResource("3_4tbmr")
stretch_mode = 2

[node name="Starbar" type="HBoxContainer" parent="."]
offset_left = 152.0
offset_top = 278.0
offset_right = 304.0
offset_bottom = 292.0
theme_override_constants/separation = 11
script = ExtResource("4_m1kjj")

[node name="s1" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="s2" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="s3" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="s4" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="s5" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="s6" type="TextureRect" parent="Starbar"]
layout_mode = 2
texture = ExtResource("5_opm7o")
stretch_mode = 2

[node name="enemybar" type="HBoxContainer" parent="."]
offset_left = 145.0
offset_top = 295.0
offset_right = 301.0
offset_bottom = 322.0
script = ExtResource("6_saj0b")

[node name="enemybar0" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar1" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar2" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar3" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar4" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar5" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar6" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="enemybar7" type="TextureRect" parent="enemybar"]
layout_mode = 2
texture = ExtResource("7_e7p4r")
stretch_mode = 2

[node name="abilitycard" type="HBoxContainer" parent="."]
offset_left = 94.0
offset_top = 260.0
offset_right = 136.0
offset_bottom = 300.0
scale = Vector2(1.16, 1.12)
script = ExtResource("8_wng41")

[node name="cardSprite" type="TextureRect" parent="abilitycard"]
layout_mode = 2
texture = ExtResource("9_3esxq")
